# yew_assets

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/: FUNDING.yml
app/: Cargo.toml  app.js  index.html  package-lock.json  package.json
app/src/: app.rs  lib.rs
app/src/pages/: about.rs  home.rs
app/src/yew_assets/: Cargo.toml
app/src/yew_assets/src/: lib.rs
app/src/yew_assets/src/components/: browser_assets.rs  browser_assets.txt  bussines_assets.rs  bussines_assets.txt  comunication_assets.rs  comunication_assets.txt  controller_assets.rs  controller_assets.txt  dev_assets.rs  dev_assets.txt  device_assets.rs  device_assets.txt  editing_assets.rs  editing_assets.txt  env_assets.rs  env_assets.txt  file_assets.rs  file_assets.txt  info_assets.rs  info_assets.txt  mod.rs  multimedia_assets.rs  multimedia_assets.txt  nav_assets.rs  nav_assets.txt  object_assets.rs  object_assets.txt  social_assets.rs  social_assets.txt  ux_assets.rs  ux_assets.txt
app/static/: main.css  main.css.map  main.sass
app/yew_assets/: Cargo.toml  LICENSE-MIT.md  README.md
app/yew_assets/src/: lib.rs
app/yew_assets/src/components/: browser_assets.rs  business_assets.rs  communication_assets.rs  controller_assets.rs  dev_assets.rs  device_assets.rs  editing_assets.rs  env_assets.rs  file_assets.rs  info_assets.rs  mod.rs  multimedia_assets.rs  nav_assets.rs  object_assets.rs  social_assets.rs  ux_assets.rs
src/: main.rs
