[package]
name = "yew_assets"
version = "0.1.1"
authors = ["Francisco Jesus Navarro Cortes"]
edition = "2018"
license = "MIT/Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["macros", "stream", "process", "rt-threaded","sync", "tcp", "fs", "dns"] }
warp = "0.2"
log = "0.4"
pretty_env_logger = "0.4"
hyper="0.13"
futures="0.3"
spielrs_diff = "0.2"
dotenv = "0.15"
