[package]
authors = ["Francisco Jesus Navarro Cortes"]
categories = ["wasm", "graphics", "web-programming", "web-programming::http-client"]
description = "Assets Icon components for yew"
license = "MIT/Apache-2.0"
name = "yew_assets_page"
readme = "./README.md"
repository = "https://github.com/spielrs/yew_assets"
version = "0.1.1"

[lib]
crate-type = ["cdylib"]

[dependencies]
cfg-if = "1.0"
wasm-bindgen = "0.2"
console_error_panic_hook = { version = "0.1", optional = true }
wee_alloc = { version = "0.4", optional = true }
serde = "1.0"
serde_derive = "1.0"
dotenv = "0.15"
failure = "0.1"
yew = { version="0.18", features = ["toml", "yaml", "msgpack", "cbor", "web_sys"]}
yew_styles = { version= "0.9", features=["layouts"]}
yew_assets = { path = "./yew_assets", features=["full"]}
yew_prism = "0.4"