[package]
name = "yew_assets"
version = "0.1.0"
authors = ["Francisco Jesus Navarro Cortes"]
edition = "2018"
license = "MIT/Apache-2.0"
description = "Assets Icon for yew"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version="0.17", features = ["web_sys"] }